--- a/clientpy3/badsecret.cfg
+++ b/clientpy3/badsecret.cfg
@@ -1,14 +1,12 @@
 [Server]
-notURL: http://caise.geos.ed.ac.uk:5000
-failedURL: https://www.geos.ed.ac.uk/geosmeta:5000
-URL: https://www.geos.ed.ac.uk/geosmeta
+URL: https://www.etc to server
  
 [Logging]
 logfile: geosmeta.log
 loglevel: DEBUG
  
 [Authentication]
-username: mjm
+username: your_registered_geosmeta_username
 secret: notthis
 
 [Project]
